# consumers

./: .env.example  .gitignore  Dockerfile  README.md  base_worker.py  config.py  consumer.py  docker-compose.yml  llm_client.py  logging_config.py  progress.py  pyproject.toml  sample_events.py  schemas.py  test_local.py  worker.py
consumers/: __init__.py  evaluate_conversations.py  simulate_conversations.py
tests/: test_local.py
